--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,38 +1,75 @@
-*{
+* {
     font-family: 'Open Sans', sans-serif;
 }
 
-.text-primary{
-    color: #FD6E0A;
+.header {
+    background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
-nav{
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
-.nav-title{
+.banenr-content {
+    max-width: 500px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-description {
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+
+.text-primary {
+    color: #FD6E0A;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 30px 30px 200px;
+}
+
+.nav-title {
     color: #181818;
     font-size: 45px;
     font-weight: 800;
 }
 
-nav > ul{
+nav>ul {
     display: flex;
     align-items: center;
 }
 
-nav li{
+nav li {
     list-style: none;
     margin-right: 50px;
 }
 
-nav a{
+nav a {
     text-decoration: none;
     color: #474747;
 }
 
-.btn-primary{
+.btn-primary {
     border-radius: 5px;
     background: #FD6E0A;
     color: white;
@@ -40,4 +77,52 @@ nav a{
     padding: 15px 35px;
     font-size: 20px;
     font-weight: 700;
+}
+
+.banner .profile-pic {
+    width: 500px;
+}
+
+
+/* main section starts*/
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* main about section*/
+
+.about {
+    padding: 131px 157px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin:130px 0px;
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info{
+    text-align: center;
+}
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+#what-i-do-dscription{
+    padding: 30px 150px;
 }
